# Stock-Market-Creation

./: .gitignore  Cargo.toml  README.md
config/: yaml_conf.yaml
migrations/: 20240630130404_test.sql  20240806214512_tick_database.sql
src/: errors.rs  generate_database.rs  main.rs  player_turn.rs  process.rs
src/database/: mod.rs  postgres_connection.rs  sqlite_connection.rs
src/market/: mod.rs  player.rs
src/player/: mod.rs  player_impl.rs
src/tools/: mathematical.rs  mod.rs  yaml_connection.rs
src/trading_objects/: market.rs  mod.rs  player.rs
