[package]
name = "stock_market_creation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
sqlite = "0.36.0"
sqlx = { version = "0.7.3", default-features = false, features = ["macros", "runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
thiserror = "1.0.61"
